# dlexer

./: Cargo.toml  README.md  examples.rs
src/: binary.rs  errors.rs  lex.rs  lib.rs  prelude.rs  stream.rs
src/examples/: hex_color_parser.rs  json_parser.rs  mod.rs  xml_parser.rs
src/parsec/: extra.rs  mod.rs
