[package]
name = "dlexer"
version = "0.1.7"
edition = "2021"
authors = ["Dexer Matters"]
description = "A high-performance, functional parser combinator library for Rust"
repository = "https://github.com/DexerMatters/dlexer"
license = "MIT"
keywords = ["parser", "combinator", "lexer", "functional", "parsing"]
categories = ["parsing", "compilers"]
readme = "README.md"
documentation = "https://docs.rs/dlexer"
homepage = "https://github.com/DexerMatters/dlexer"

[dependencies]

[features]
experimental = []
